# isithot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  babel.cfg  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: CI.yaml  pages.yaml
docs/src/: conf.py  index.md
isithot/: __init__.py  app.py  config.py  requirements-dev.in  wsgi.py
isithot/blueprints/: isithot.py  plots.py
isithot/templates/: index.html
isithot/translations/: messages.pot
isithot/translations/de/LC_MESSAGES/: messages.mo  messages.po
testing/: db_setup.sql  example_app.py
testing/monthly_input_data/: lms_daily.csv  lmss_daily.csv  lmss_daily_long.csv  rgs_daily.csv
testing/raw/: lmss_garden_raw.csv
tests/: conftest.py  isithot_test.py
tests/web/: isithot_test.py
web/isithot/: app.py  dockerfile  gunicorn_dev_cfg.py  requirements-dev.txt  requirements-minimal.txt  requirements.in  requirements.txt
web/isithot/blueprints/: isithot.py  plots.py
web/isithot/templates/: index.html
web/isithot/translations/: messages.pot
web/isithot/translations/de/LC_MESSAGES/: messages.po
